event listeners sharded across event queue, formulate data model in terms of both aggregates and events